# tokio-console-web

./: .gitignore  Cargo.toml  README.md
assets/: index.js  package-lock.json  package.json  webpack.config.js
src/: cancel_on_drop.rs  macros.rs  main.rs  routes.rs  state.rs  watch_stream.rs
src/views/: connection_state.rs  layout.rs  mod.rs  resources_index.rs  table.rs  table_view_keybinds.rs  tasks_index.rs
