[package]
name = "tokio-console-web"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.4"
axum-liveview = { git = "https://github.com/davidpdrsn/axum-liveview" }
clap = { version = "3.0.0-rc.7", features = ["derive", "env"] }
console-api = { version = "0.1.0", features = ["transport"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.2", features = ["trace", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tonic = "0.6"
tokio-util = "0.6"
uuid = "0.8"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.9"
regex = "1.5"
