[package]
name = "tokio-console-web"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.4"
axum-live-view = { git = "https://github.com/davidpdrsn/axum-live-view" }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.0.0-rc.7", features = ["derive", "env"] }
console-api = { version = "0.1.0", features = ["transport"] }
once_cell = "1.9"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.6"
tonic = "0.6"
tower = "0.4"
tower-http = { version = "0.2", features = ["trace", "util", "add-extension"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = "0.8"
